tdf#108591 Don't hardcode xdg-open path

Change-Id: I6f32433284948e42798c3535db64b4ad48295d35